ingress/ingressclass-elad-madar.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: elad-madar
spec:
  controller: k8s.io/ingress-nginx
