ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    name: elad-madar-wordpress-ingress
    namespace: elad-madar
spec:
  ingressClassName: elad-nginx
  rules:
  - host: a0c9acda7d4f64c4d8e02d2173f335c1-1849343485.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /elad
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
